# AuroraV6

./: .gitmodules  CMakeLists.txt  aurorav6-init.d  demo_machinations_192x96.json  demo_machinations_64x32.json
audio-test/: AudioInput.py  CircularBuffer.py  FindBeats.py  cFindBeats.pyx  testFindBeats.py
src/: Audio.cpp  Audio.h  Aurora.cpp  CircularBuffer.h  Controller.cpp  Controller.h  Drawer.h  FindBeats.cpp  FindBeats.h  GinzburgLandau.cpp  GinzburgLandau.h  GrayScott.cpp  GrayScott.h  HzellerRpiMatrix.h  KeyboardAudio.cpp  KeyboardAudio.h  Palette.cpp  Palette.h  ReactionDiffusion.cpp  ReactionDiffusion.h  Util.h  VampPluginHost.cpp  VampPluginHost.h  findbeats.py
